z-index fixed in mobile menu

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -42,6 +42,7 @@ body {
   }
 
   &__mobile-navigation {
+    z-index: 3;
     position: fixed;
     top: 0;
     left: 0;
